feat(redis): integrate Redis caching and configuration for improved performance

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -30,3 +30,16 @@ logging:
     root: WARN
     com.ar.laboratory: INFO
 
+# ============================
+# Redis Configuration (Prod)
+# ============================
+spring:
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:}
+  cache:
+    redis:
+      time-to-live: 1800000
+
