--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,86 +1,26 @@
 version: '3.8'
 
 services:
-  # ============================
-  # Servicio: Base API (Spring Boot)
-  # ============================
-  base-api:
-    container_name: base-api-app
-    build:
-      context: ..
-      dockerfile: Dockerfile
-    image: base-api:latest
+  redis:
+    image: redis:7-alpine
+    container_name: base-api-redis
     ports:
-      - "8080:8080"
-    environment:
-      # Spring Boot Configuration
-      SPRING_PROFILES_ACTIVE: local
-      SPRING_APPLICATION_NAME: base-api
-      SERVER_PORT: 8080
-      SERVER_SERVLET_CONTEXT_PATH: /base-api
-
-      # JVM Options (opcional, ya están en Dockerfile pero se pueden sobrescribir)
-      JAVA_OPTS: >
-        -XX:+UseContainerSupport
-        -XX:MaxRAMPercentage=75.0
-        -XX:+UseG1GC
-        -Djava.security.egd=file:/dev/./urandom
-
-      # H2 Database Configuration
-      SPRING_DATASOURCE_URL: jdbc:h2:mem:testdb
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.h2.Driver
-      SPRING_DATASOURCE_USERNAME: sa
-      SPRING_DATASOURCE_PASSWORD:
-      SPRING_JPA_DATABASE_PLATFORM: org.hibernate.dialect.H2Dialect
-      SPRING_H2_CONSOLE_ENABLED: true
-      SPRING_H2_CONSOLE_PATH: /h2-console
-
-      # Logging
-      LOGGING_LEVEL_ROOT: INFO
-      LOGGING_LEVEL_COM_AR_LABORATORY: DEBUG
-
-      # Actuator (para health checks)
-      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,metrics
-      MANAGEMENT_ENDPOINT_HEALTH_SHOW_DETAILS: always
-
+      - "6379:6379"
     volumes:
-      # Persistir logs (opcional)
-      - ./logs:/app/logs
-
+      - redis-data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
     networks:
       - base-api-network
 
-    restart: unless-stopped
+volumes:
+  redis-data:
+    driver: local
 
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/base-api/actuator/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-    # Límites de recursos (ajustar según necesidad)
-    deploy:
-      resources:
-        limits:
-          cpus: '2.0'
-          memory: 1G
-        reservations:
-          cpus: '0.5'
-          memory: 512M
-
-# ============================
-# Redes
-# ============================
 networks:
   base-api-network:
     driver: bridge
-    name: base-api-network
-
-# ============================
-# Volúmenes
-# ============================
-volumes:
-  logs:
-    driver: local
-
