--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -43,3 +43,15 @@ logging:
     org.springframework.web: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+# ============================
+# Redis Configuration (Local)
+# ============================
+spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  cache:
+    redis:
+      time-to-live: 300000
