--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -3,23 +3,31 @@
 # ============================
 
 # ============================
-# H2 Database Configuration
+# PostgreSQL Database Configuration
 # ============================
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/baseapi
+    username: admin
+    password: 1q2w3e
+    driver-class-name: org.postgresql.Driver
   
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          lob:
+            non_contextual_creation: true
+  
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
 
 # ============================
 # Actuator Configuration
