--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,9 +15,32 @@ management:
       show-details: never
 
 # ============================
-# H2 Console Configuration
+# PostgreSQL Database Configuration
 # ============================
 spring:
+  datasource:
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/baseapi}
+    username: ${DATABASE_USER:admin}
+    password: ${DATABASE_PASSWORD:1q2w3e}
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+    show-sql: false
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non_contextual_creation: true
+  
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+  
+  # H2 Console Configuration
   h2:
     console:
       enabled: false
