--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,10 +2,10 @@
 # Development Profile Configuration
 # ============================
 
-# ============================
-# PostgreSQL Database Configuration
-# ============================
 spring:
+  # ============================
+  # PostgreSQL Database Configuration
+  # ============================
   datasource:
     url: jdbc:postgresql://localhost:5432/baseapi
     username: admin
@@ -28,6 +28,19 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
+  
+  # ============================
+  # Redis Configuration
+  # ============================
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  
+  cache:
+    type: redis
+    redis:
+      time-to-live: 600000
 
 # ============================
 # Actuator Configuration
@@ -51,16 +64,3 @@ logging:
     org.springframework.web: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-
-# ============================
-# Redis Configuration (Dev)
-# ============================
-spring:
-  data:
-    redis:
-      host: localhost
-      port: 6379
-  cache:
-    redis:
-      time-to-live: 600000
-
