feat(cuit): implement CUIT service adapter with WireMock configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,6 +79,12 @@ app:
   version: '@project.version@'
 
 # ============================
+# WireMock Configuration
+# ============================
+wiremock:
+  url: http://localhost:8090
+
+# ============================
 # Logging Configuration
 # ============================
 logging:
