--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -36,6 +36,23 @@ services:
     networks:
       - base-api-network
 
+  wiremock:
+    image: wiremock/wiremock:3.3.1-alpine
+    container_name: base-api-wiremock
+    ports:
+      - "8090:8080"
+    volumes:
+      - ./wiremock/mappings:/home/wiremock/mappings
+      - ./wiremock/__files:/home/wiremock/__files
+    command: ["--verbose"]
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8080/__admin/health"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    networks:
+      - base-api-network
+
 volumes:
   redis-data:
     driver: local
